--- a/Resources/config/form_types.yml
+++ b/Resources/config/form_types.yml
@@ -1,5 +1,6 @@
 parameters:
-  kiboko_enrich.form.type.translatable_field.class: Kiboko\Bundle\EnrichBundle\Form\Type\TranslatableFieldType
+  kiboko_enrich.form.type.media_field.class: Kiboko\Bundle\EnrichBundle\Form\Type\MediaType
+  kiboko_enrich.form.type.translatable_field.class: Kiboko\Bundle\EnrichBundle\Form\Type\TranslatableType
 
 services:
   kiboko_enrich.form.type.translatable_field:
@@ -10,3 +11,10 @@ services:
       - '@pim_catalog.helper.locale'
     tags:
       - { name: form.type, alias: kiboko_translatable_field }
+
+  kiboko_enrich.form.type.media_field:
+    class: '%kiboko_enrich.form.type.media_field.class%'
+    arguments:
+      - %akeneo_file_storage.model.file_info.class%
+    tags:
+      - { name: form.type, alias: kiboko_enrich_media }
