--- a/composer.json
+++ b/composer.json
@@ -27,5 +27,10 @@
         "psr-4": {
             "Kiboko\\Bundle\\EnrichBundle\\": ""
         }
+    },
+    "extra": {
+        "branch-alias": {
+            "dev-master": "2.0.x-dev"
+        }
     }
 }
