--- a/composer.json
+++ b/composer.json
@@ -20,8 +20,8 @@
         }
     ],
     "require": {
-        "akeneo/pim-community-dev": "~2.0.0",
-        "akeneo-labs/custom-entity-bundle": "~2.0.0"
+        "akeneo/pim-community-dev": "2.*",
+        "akeneo-labs/custom-entity-bundle": "2.*"
     },
     "autoload": {
         "psr-4": {
