--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
     ],
     "require": {
         "akeneo/pim-community-dev": "2.*",
-        "akeneo-labs/custom-entity-bundle": "2.*"
+        "akeneo-labs/custom-entity-bundle": "~2.1|~2.2"
     },
     "autoload": {
         "psr-4": {
