--- a/composer.json
+++ b/composer.json
@@ -20,8 +20,8 @@
         }
     ],
     "require": {
-        "akeneo/pim-community-dev": "2.*",
-        "akeneo-labs/custom-entity-bundle": "~2.1|~2.2"
+        "akeneo/pim-community-dev": "2.3.*",
+        "akeneo-labs/custom-entity-bundle": "~2.4"
     },
     "autoload": {
         "psr-4": {
