--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
     ],
     "require": {
         "akeneo/pim-community-dev": "2.*",
-        "akeneo-labs/custom-entity-bundle": "~2.4"
+        "akeneo-labs/custom-entity-bundle": "~2.1|~2.2|~2.4"
     },
     "autoload": {
         "psr-4": {
