--- a/composer.json
+++ b/composer.json
@@ -20,8 +20,7 @@
         }
     ],
     "require": {
-        "akeneo/pim-community-dev": "2.*",
-        "akeneo-labs/custom-entity-bundle": "~2.1|~2.2|~2.4"
+        "akeneo-labs/custom-entity-bundle": "~2.1|~2.2|~2.4|~3.0"
     },
     "autoload": {
         "psr-4": {
